--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
     <a href="https://x.com/techabbayi" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a>
   </div>
 
+  <div class="footer">
+    <a href="https://akmultivison.xyz" target="_blank" rel="noopener noreferrer">
+      Made with ❤️ by Techabbayi
+    </a>
+  </div>
+
   <script src="./script.js"></script>
 </body>
 
